--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Links Page</title>
+	<title>Gianyrox's Social Links</title>
 	<script type="text/javascript"
 		src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 	<style>
@@ -85,22 +85,22 @@
 
 <body>
 	<div class="container">
-		<div class="title">Welcome to My Links Page</div>
-		<div class="subtitle">Explore these useful links:</div>
+		<div class="title">Welcome to Gianyrox's Social Links</div>
+		<div class="subtitle">Follow me on these platforms:</div>
 		<div class="description">
-			Here's a collection of links you might find interesting.
-			If you'd like to learn more, here is an example of a LaTeX equation:
+			Stay connected and follow me on my social media accounts.
+			Here's an example of a LaTeX equation:
 			$$ E = mc^2 $$
-			This is the famous formula by Einstein relating energy and mass.
+			which describes the equivalence of energy and mass.
 		</div>
 
-		<!-- Links Section -->
-		<a href="#" class="link">Link 1</a>
-		<a href="#" class="link">Link 2</a>
-		<a href="#" class="link">Link 3</a>
-		<a href="#" class="link">Link 4</a>
-		<a href="#" class="link">Link 5</a>
-		<a href="#" class="link">Link 6</a>
+		<!-- Social Media Links Section -->
+		<a href="https://twitter.com/Gianyrox" class="link" target="_blank">Twitter - @Gianyrox</a>
+		<a href="https://www.instagram.com/Gianyrox" class="link" target="_blank">Instagram - @Gianyrox</a>
+		<a href="https://github.com/Gianyrox" class="link" target="_blank">GitHub - @Gianyrox</a>
+		<a href="https://www.linkedin.com/in/Gianyrox" class="link" target="_blank">LinkedIn - Gianyrox</a>
+		<a href="https://www.facebook.com/Gianyrox" class="link" target="_blank">Facebook - @Gianyrox</a>
+		<a href="https://www.youtube.com/channel/Gianyrox" class="link" target="_blank">YouTube - Gianyrox</a>
 	</div>
 </body>
 
