--- a/index.html
+++ b/index.html
@@ -85,23 +85,25 @@
 
 <body>
 	<div class="container">
-		<div class="title">Welcome to Gianyrox's Social Links</div>
-		<div class="subtitle">Follow me on these platforms:</div>
+		<div class="title">Gianyrox</div>
+		<div class="subtitle">Gianyrox Everywhere.</div>
+
 		<div class="description">
-			Stay connected and follow me on my social media accounts.
-			Here's an example of a LaTeX equation:
-			$$ E = mc^2 $$
-			which describes the equivalence of energy and mass.
+			<p><strong>Euler's Formula:</strong><br>
+				$$ e^{ix} = \cos x + i \sin x $$
+			</p>
+
+			<!-- Photon Image -->
+			<img
+				src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Photon_sphere.svg/1024px-Photon_sphere.svg.png"
+				alt="Photon moving through space" style="width: 100%; max-width: 400px; display: block; margin-top: 20px;">
 		</div>
 
+
 		<!-- Social Media Links Section -->
-		<a href="https://twitter.com/Gianyrox" class="link" target="_blank">Twitter - @Gianyrox</a>
-		<a href="https://www.instagram.com/Gianyrox" class="link" target="_blank">Instagram - @Gianyrox</a>
+		<a href="https://x.com/Gianyrox" class="link" target="_blank">X - @Gianyrox</a>
 		<a href="https://github.com/Gianyrox" class="link" target="_blank">GitHub - @Gianyrox</a>
-		<a href="https://www.linkedin.com/in/Gianyrox" class="link" target="_blank">LinkedIn - Gianyrox</a>
-		<a href="https://www.facebook.com/Gianyrox" class="link" target="_blank">Facebook - @Gianyrox</a>
-		<a href="https://www.youtube.com/channel/Gianyrox" class="link" target="_blank">YouTube - Gianyrox</a>
-	</div>
+		<a href="https://medium.com/@Gianyrox" class="link" target="_blank">Medium - @Gianyrox</a>
 </body>
 
 </html>
