--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
 			</p>
 
 			<!-- Photon Image -->
-			<img
-				src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Photon_sphere.svg/1024px-Photon_sphere.svg.png"
-				alt="Photon moving through space" style="width: 100%; max-width: 400px; display: block; margin-top: 20px;">
+			<img src="https://www.nouvir.com/images/7_photon_figure_300_DPI_grayscale.jpg" alt="Photon moving through space"
+				style="width: 100%; max-width: 400px; display: block; margin-top: 20px;">
 		</div>
 
 
