--- a/index.html
+++ b/index.html
@@ -80,6 +80,21 @@
 				font-size: 18px;
 			}
 		}
+
+		.section-header {
+			color: #264653;
+			font-size: 20px;
+			margin-top: 30px;
+			margin-bottom: 15px;
+			width: 100%;
+			text-align: center;
+		}
+
+		.coming-soon {
+			color: #6c757d;
+			font-style: italic;
+			margin: 10px 0;
+		}
 	</style>
 </head>
 
@@ -98,18 +113,27 @@
 				style="width: 100%; max-width: 400px; display: block; margin-top: 20px;">
 		</div>
 
-
-		<!-- Social Media Links Section -->
+		<!-- Profiles Section -->
+		<h2 class="section-header">Profiles</h2>
 		<a href="https://github.com/Gianyrox" class="link" target="_blank">GitHub - @Gianyrox</a>
 		<a href="https://x.com/Gianyrox" class="link" target="_blank">X - @Gianyrox</a>
 		<a href="https://medium.com/@Gianyrox" class="link" target="_blank">Medium - @Gianyrox</a>
 
+		<!-- Articles Section -->
+		<h2 class="section-header">Articles</h2>
 		<a href="https://medium.com/@gianyrox/the-biblical-flood-that-began-history-meltwater-pulse-1a-f70633c8f2c2" class="link" target="_blank">The Biblical Flood That Began History: Meltwater Pulse 1A</a>
 		<a href="https://medium.com/@gianyrox/math-the-path-to-polymath-7fcabe9d81f9" class="link" target="_blank">Math: The Path to Polymath</a>
 		<a href="https://github.com/gianyrox/US-States-Obesity-Analysis/blob/main/US_State_Analysis.ipynb" class="link" target="_blank">US States Obesity Analysis</a>
 
+		<!-- Companies Section -->
+		<h2 class="section-header">Companies</h2>
 		<a href="https://bucket.foundation" class="link" target="_blank">Bucket Foundation</a>
 		<a href="https://agfarms.dev" class="link" target="_blank">AGFarms Developers</a>
+
+		<!-- Books Section -->
+		<h2 class="section-header">Books</h2>
+		<p class="coming-soon">Coming Soon...</p>
+	</div>
 </body>
 
 </html>
