--- a/index.html
+++ b/index.html
@@ -118,10 +118,11 @@
 		<a href="https://github.com/Gianyrox" class="link" target="_blank">GitHub - @Gianyrox</a>
 		<a href="https://x.com/Gianyrox" class="link" target="_blank">X - @Gianyrox</a>
 		<a href="https://medium.com/@Gianyrox" class="link" target="_blank">Medium - @Gianyrox</a>
-		
+
 		<!-- Companies Section -->
 		<h2 class="section-header">Companies</h2>
 		<a href="https://bucket.foundation" class="link" target="_blank">Bucket Foundation</a>
+		<a href="https://agfarms.dev" class="link" target="_blank">AGFarms Developers</a>
 		<a href="https://agfarms.dev" class="link" target="_blank">AGFarms Developers</a>
 
 
