--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		<h2 class="section-header">Companies</h2>
 		<a href="https://bucket.foundation" class="link" target="_blank">Bucket Foundation</a>
 		<a href="https://agfarms.dev" class="link" target="_blank">AGFarms Developers</a>
-		<a href="https://agfarms.dev" class="link" target="_blank">AGFarms Developers</a>
+		<a href="https://derby.fish" class="link" target="_blank">Derby Fish</a>
 
 
 		<!-- Articles Section -->
