--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		<a href="https://bucket.foundation" class="link" target="_blank">Bucket Foundation</a>
 		<a href="https://agfarms.dev" class="link" target="_blank">AGFarms Developers</a>
 		<a href="https://derby.fish" class="link" target="_blank">Derby Fish</a>
-		<a href="https://www.agfarms.dev" class="link" target="_blank">AGFarms</a>
+		<a href="https://fillitin.ink" class="link" target="_blank">AGFarms</a>
 
 
 		<!-- Articles Section -->
