--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
 		body {
 			font-family: Arial, sans-serif;
 			margin: 0;
-			padding: 0;
+			padding: 20px;
 			display: flex;
 			justify-content: center;
-			align-items: center;
-			height: 100vh;
+			align-items: flex-start;
+			min-height: 100vh;
 			background-color: #f4f4f4;
+			overflow-y: auto;
 		}
 
 		.container {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			padding: 20px;
+			padding: 40px 20px;
 			background-color: white;
 			border-radius: 8px;
 			box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 			width: 80%;
 			max-width: 600px;
+			margin: 20px auto;
 		}
 
 		.link {
@@ -64,8 +66,13 @@
 		}
 
 		@media (max-width: 600px) {
-			.container {
+			body {
 				padding: 10px;
+			}
+
+			.container {
+				padding: 20px 15px;
+				width: 90%;
 			}
 
 			.link {
