--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 		<a href="https://agfarms.dev" class="link" target="_blank">AGFarms Developers</a>
 
 		<!-- Articles Section -->
-		<h2 class="section-header">Articles</h2>
+		<h2 class="section-header">Highlighted Articles</h2>
 		<a href="https://medium.com/@gianyrox/the-biblical-flood-that-began-history-meltwater-pulse-1a-f70633c8f2c2" class="link" target="_blank">The Biblical Flood That Began History: Meltwater Pulse 1A</a>
 		<a href="https://medium.com/@gianyrox/math-the-path-to-polymath-7fcabe9d81f9" class="link" target="_blank">Math: The Path to Polymath</a>
 		<a href="https://github.com/gianyrox/US-States-Obesity-Analysis/blob/main/US_State_Analysis.ipynb" class="link" target="_blank">US States Obesity Analysis</a>
