--- a/index.html
+++ b/index.html
@@ -126,16 +126,25 @@
 		<a href="https://github.com/Gianyrox" class="link" target="_blank">GitHub - @Gianyrox</a>
 		<a href="https://x.com/Gianyrox" class="link" target="_blank">X - @Gianyrox</a>
 		<a href="https://medium.com/@Gianyrox" class="link" target="_blank">Medium - @Gianyrox</a>
+		<a href="https://linkedin.com/in/gianyrox" class="link" target="_blank">LinkedIn - @gianyrox</a>
 
 		<!-- Companies Section -->
 		<h2 class="section-header">Companies</h2>
 		<a href="https://bucket.foundation" class="link" target="_blank">Bucket Foundation</a>
 		<a href="https://agfarms.dev" class="link" target="_blank">AGFarms Developers</a>
 
+		<!-- Projects Section -->
+		<h2 class="section-header">Projects</h2>
+		<a href="https://derby.fish" class="link" target="_blank">derby.fish</a>
+		<a href="https://gauss.news" class="link" target="_blank">gauss.news</a>
+		<a href="https://taskl.app" class="link" target="_blank">taskl.app</a>
+
 		<!-- Articles Section -->
 		<h2 class="section-header">Highlighted Articles</h2>
 		<a href="https://medium.com/@gianyrox/the-biblical-flood-that-began-history-meltwater-pulse-1a-f70633c8f2c2" class="link" target="_blank">The Biblical Flood That Began History: Meltwater Pulse 1A</a>
 		<a href="https://medium.com/@gianyrox/math-the-path-to-polymath-7fcabe9d81f9" class="link" target="_blank">Math: The Path to Polymath</a>
+		<a href="https://medium.com/@gianyrox/the-magical-one-shot-app-builders-guide-to-bringing-ideas-to-life-a96e1b93bc2a" class="link" target="_blank">The Magical One-Shot App Builder's Guide to Bringing Ideas to Life</a>
+		<a href="https://medium.com/@gianyrox/how-chatgpt-will-ruin-the-world-57ea88b203fe" class="link" target="_blank">How ChatGPT Will Ruin the World</a>
 		<a href="https://github.com/gianyrox/US-States-Obesity-Analysis/blob/main/US_State_Analysis.ipynb" class="link" target="_blank">US States Obesity Analysis</a>
 
 		<!-- Books Section -->
